Added POJO classes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,13 +1,20 @@
+annotation.processing.processors.list=
 #Sun Apr 21 14:56:17 EDT 2019
 excludes=
 file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 application.homepage=http\://appframework.dev.java.net
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-javac.processorpath=${javac.classpath}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.6
 javadoc.noindex=false
 javadoc.additionalparam=
@@ -38,8 +45,7 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.junit_4.classpath}
 jar.compress=false
 build.generated.dir=${build.dir}/generated
 javadoc.private=false
