Pojo updates with Tele health structure and ids Basic Structure and panel settings

--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -30,3 +30,12 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
+#NOI18N
+fileMenu.font=Segoe UI-Plain-14
+#NOI18N
+helpMenu.font=Segoe UI-Plain-14
+#NOI18N
+exitMenuItem.font=Segoe UI-Plain-14
+#NOI18N
+aboutMenuItem.font=Segoe UI-Plain-14
+jmiNetwork.text=Network
