--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,12 @@
 annotation.processing.processors.list=
 #Sun Apr 21 14:56:17 EDT 2019
 excludes=
+file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
+file.reference.appframework-1.0.3.jar=lib\\appframework-1.0.3.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar=lib\\db4o-8.0.184.15484-all-java5.jar
+file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
+file.reference.swing-worker-1.1.jar=lib\\swing-worker-1.1.jar
+file.reference.swingx-1.6.jar=lib\\swingx-1.6.jar
 file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
@@ -59,7 +65,13 @@ src.dir=src
 endorsed.classpath=
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${file.reference.weblaf-complete-1.29.jar}
+    ${file.reference.weblaf-complete-1.29.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.appframework-1.0.3.jar}:\
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.swingx-1.6.jar}:\
+    ${file.reference.gson-2.8.5.jar}
 annotation.processing.enabled.in.editor=false
 application.desc=A simple java desktop application based on Swing Application Framework
 build.generated.sources.dir=${build.dir}/generated-sources
