File menu options added

--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -39,3 +39,6 @@ exitMenuItem.font=Segoe UI-Plain-14
 #NOI18N
 aboutMenuItem.font=Segoe UI-Plain-14
 jmiNetwork.text=Network
+jmiOrganization.text=Organization
+jmiUserAccount.text=User Account
+jmiPatient.text=Patient
