--- a/src/telehealth/resources/NetworkPanel.properties
+++ b/src/telehealth/resources/NetworkPanel.properties
@@ -1,6 +1,14 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
-jLabel1.text=jLabel1
-jTextField1.text=
+jLabel1.text=Network Name:
+#NOI18N
+jLabel1.font=Roboto-Plain-14
+txtNetworkName.text=
+btnAddNetwork.text=Add
+#NOI18N
+btnAddNetwork.font=Roboto-Bold-14
+tblNetwork.columnModel.title1=Network Name
+tblNetwork.columnModel.title0=Network Id
+#NOI18N
+tblNetwork.font=Roboto-Plain-14
+btnDeleteNetwork.text=Delete
+#NOI18N
+btnDeleteNetwork.font=Roboto 14 Bold
