--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,27 +1,17 @@
-annotation.processing.processors.list=
-#Sun Apr 21 14:56:17 EDT 2019
-excludes=
+#Tue Apr 23 14:33:42 EDT 2019
 file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
-file.reference.appframework-1.0.3.jar=lib\\appframework-1.0.3.jar
-file.reference.db4o-8.0.184.15484-all-java5.jar=lib\\db4o-8.0.184.15484-all-java5.jar
-file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
-file.reference.swing-worker-1.1.jar=lib\\swing-worker-1.1.jar
-file.reference.swingx-1.6.jar=lib\\swingx-1.6.jar
-file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
+excludes=
 javac.deprecation=false
+file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
 build.test.results.dir=${build.dir}/test/results
-mkdist.disabled=false
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
 application.homepage=http\://appframework.dev.java.net
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-javac.processorpath=\
-    ${javac.classpath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+javac.processorpath=${javac.classpath}
 javac.target=1.6
+file.reference.db4o-8.0.184.15484-all-java5.jar=lib\\db4o-8.0.184.15484-all-java5.jar
+annotation.processing.processors.list=
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -36,43 +26,41 @@ javac.compilerargs=
 main.class=telehealth.TeleHealthApp
 dist.jar=${dist.dir}/TeleHealth.jar
 javadoc.use=true
+file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
+file.reference.swing-worker-1.1.jar=lib\\swing-worker-1.1.jar
 build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
 javac.source=1.6
 application.vendor=Sun Microsystems Inc.
 junit.selected.version=4
 debug.classpath=${run.classpath}
 run.jvmargs=
+build.generated.dir=${build.dir}/generated
+jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
-jar.compress=false
-build.generated.dir=${build.dir}/generated
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javadoc.private=false
 annotation.processing.run.all.processors=true
 application.title=Basic Application Example
+file.reference.appframework-1.0.3.jar=lib\\appframework-1.0.3.jar
 meta.inf.dir=${src.dir}/META-INF
-manifest.file=manifest.mf
 annotation.processing.enabled=true
+manifest.file=manifest.mf
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
+file.reference.swingx-1.6.jar=lib\\swingx-1.6.jar
 endorsed.classpath=
-javac.classpath=\
-    ${libs.swing-app-framework.classpath}:\
-    ${file.reference.weblaf-complete-1.29.jar}:\
-    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
-    ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.appframework-1.0.3.jar}:\
-    ${file.reference.swing-worker-1.1.jar}:\
-    ${file.reference.swingx-1.6.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+mkdist.disabled=false
 annotation.processing.enabled.in.editor=false
+javac.classpath=${libs.swing-app-framework.classpath}\:${file.reference.weblaf-complete-1.29.jar}\:${file.reference.db4o-8.0.184.15484-all-java5.jar}\:${file.reference.AbsoluteLayout.jar}\:${file.reference.appframework-1.0.3.jar}\:${file.reference.swing-worker-1.1.jar}\:${file.reference.swingx-1.6.jar}\:${file.reference.gson-2.8.5.jar}
 application.desc=A simple java desktop application based on Swing Application Framework
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
