Patient panel added

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,6 +10,7 @@ file.reference.swingx-1.6.jar=lib\\swingx-1.6.jar
 file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
+javac.external.vm=false
 mkdist.disabled=false
 run.classpath=\
     ${javac.classpath}:\
@@ -21,7 +22,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 javac.processorpath=\
     ${javac.classpath}
-javac.target=1.6
+javac.target=1.7
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -42,7 +43,7 @@ dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
 javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
-javac.source=1.6
+javac.source=1.7
 application.vendor=Sun Microsystems Inc.
 junit.selected.version=4
 debug.classpath=${run.classpath}
