Patient panel validation completed

--- a/src/telehealth/resources/PatientPanel.properties
+++ b/src/telehealth/resources/PatientPanel.properties
@@ -1,7 +1,4 @@
 jLabel1.text=Name
-jFormattedTextField1.text=jFormattedTextField1
-jButton1.text=Add Patient
-jButton2.text=Reset
 txtPatientName.text=
 lblPatientDOB.text=Date of Birth
 lblPatientBloodGroup.text=Blood Group
@@ -12,9 +9,6 @@ lblPatientZipcode.text=Zipcode
 lblPatientCity.text=City
 lblPatientAddress2.text=Address 2
 lblPatientAddress1.text=Address 1
-jLabel2.text=Add Patient
-#NOI18N
-jLabel2.font=SansSerif-Bold-18
 jTable2.columnModel.title1=Date of Birth
 jTable2.columnModel.title0=Name
 jTable2.columnModel.title3=Zipcode
@@ -23,3 +17,7 @@ jTable2.columnModel.title4=Country
 jTable2.columnModel.title5=Phone No.
 jTable2.columnModel.title6=Email ID
 jTable2.columnModel.title7=Blood Group
+btnAddPatient.text=Add
+btnDeletePatient.text=Delete
+btnReset.text=Reset
+txtPatientPhone.text=
