Patient CRUD completed

--- a/src/telehealth/resources/PatientPanel.properties
+++ b/src/telehealth/resources/PatientPanel.properties
@@ -1,5 +1,5 @@
 jLabel1.text=Name
-txtPatientName.text=
+txtPatientName.text=Bhavya
 lblPatientDOB.text=Date of Birth
 lblPatientBloodGroup.text=Blood Group
 lblPatientEmail.text=Email ID
@@ -9,15 +9,23 @@ lblPatientZipcode.text=Zipcode
 lblPatientCity.text=City
 lblPatientAddress2.text=Address 2
 lblPatientAddress1.text=Address 1
-jTable2.columnModel.title1=Date of Birth
-jTable2.columnModel.title0=Name
-jTable2.columnModel.title3=Zipcode
-jTable2.columnModel.title2=City
-jTable2.columnModel.title4=Country
-jTable2.columnModel.title5=Phone No.
-jTable2.columnModel.title6=Email ID
-jTable2.columnModel.title7=Blood Group
 btnAddPatient.text=Add
 btnDeletePatient.text=Delete
-btnReset.text=Reset
-txtPatientPhone.text=
+txtPatientPhone.text=(617)959-0785
+lblPatientState.text=State
+txtPatientState.text=MA
+tblPatient.columnModel.title7=Blood Group
+tblPatient.columnModel.title6=Email ID
+tblPatient.columnModel.title5=Phone No.
+tblPatient.columnModel.title4=Country
+tblPatient.columnModel.title3=Zipcode
+tblPatient.columnModel.title2=City
+tblPatient.columnModel.title1=Date of Birth
+tblPatient.columnModel.title0=Name
+tblPatient.columnModel.title8=Id
+tblPatient.columnModel.title9=State
+txtPatientDOB.text=08/14/1997
+txtPatientCity.text=Boston
+txtPatientZipcode.text=02120
+txtPatientCountry.text=United States
+txtPatientEmail.text=patelbhavya@hotmail.com
