Create Delete and Update operation performed in Enterprise

--- a/src/telehealth/resources/EnterprisePanel.properties
+++ b/src/telehealth/resources/EnterprisePanel.properties
@@ -1,1 +1,67 @@
 jLabel7.text=
+jLabel1.text=Name :
+#NOI18N
+jLabel1.font=Roboto 14 Plain
+tblEnterprise.columnModel.title1=Enterprise Type
+tblEnterprise.columnModel.title0=Name
+#NOI18N
+tblEnterprise.font=Roboto 14 Plain
+jLabel2.text=Address 1 :
+#NOI18N
+jLabel2.font=Roboto 14 12 Plain
+#NOI18N
+txtAddress1.font=Roboto 14 Plain
+jLabel3.text=Address 2 :
+#NOI18N
+jLabel3.font=Roboto 14 12 12 Plain
+#NOI18N
+txtAddress2.font=Roboto 14 12 Plain
+jLabel4.text=City  :
+#NOI18N
+jLabel4.font=Roboto 14 12 12 12 Plain
+jLabel5.text=State  :
+#NOI18N
+jLabel5.font=Roboto 14 12 12 12 12 Plain
+jLabel6.text=Zip  :
+#NOI18N
+jLabel6.font=Roboto 14 12 12 12 12 12 Plain
+jLabel8.text=Phone  :
+#NOI18N
+jLabel8.font=Roboto 14 12 12 12 12 12 12 Plain
+jLabel9.text=Email  :
+#NOI18N
+jLabel9.font=Roboto 14 12 12 12 12 12 12 12 Plain
+jLabel10.text=Contact Person  :
+#NOI18N
+jLabel10.font=Roboto 14 12 12 12 12 12 12 12 12 Plain
+#NOI18N
+txtEmail1.font=Roboto 14 12 12 12 12 12 12 12 Plain
+#NOI18N
+txtZip.font=Roboto 14 12 12 12 12 12 12 Plain
+#NOI18N
+txtCity.font=Roboto 14 12 12 12 12 12 12 12 Plain
+#NOI18N
+txtPhone.font=Roboto 14 12 12 12 12 12 12 12 12 Plain
+#NOI18N
+txtContactPerson.font=Roboto 14 12 12 12 12 12 12 12 12 12 12 Plain
+jLabel12.text=Enterprise Type :
+#NOI18N
+jLabel12.font=Roboto 14 12 Plain
+btnSubmit.text=Submit
+tblEnterprise.columnModel.title2=Address 1
+tblEnterprise.columnModel.title3=Address 2
+tblEnterprise.columnModel.title4=City
+tblEnterprise.columnModel.title5=State
+tblEnterprise.columnModel.title6=Zip
+tblEnterprise.columnModel.title7=Phone
+tblEnterprise.columnModel.title8=Email
+tblEnterprise.columnModel.title9=Contact Person
+#NOI18N
+txtName.font=Roboto 14 12 12 12 12 12 12 12 12 Plain
+#NOI18N
+txtState.font=Roboto 14 12 12 12 12 12 12 12 12 12 Plain
+jLabel13.text=Network :
+#NOI18N
+jLabel13.font=Roboto 14 12 12 Plain
+tblEnterprise.columnModel.title10=Network
+btnDelete.text=Delete
