--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,22 +1,18 @@
-#Tue Apr 23 14:33:42 EDT 2019
+#Tue Apr 23 19:53:09 EDT 2019
 file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
 excludes=
 javac.deprecation=false
 file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
 build.test.results.dir=${build.dir}/test/results
 javac.external.vm=false
-mkdist.disabled=false
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
 application.homepage=http\://appframework.dev.java.net
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-javac.processorpath=\
-    ${javac.classpath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+<<<<<<<=HEAD
+javac.processorpath=${javac.classpath}
 javac.target=1.7
+annotation.processing.processors.list=
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -26,52 +22,46 @@ javadoc.author=false
 test.src.dir=test
 build.dir=build
 build.test.classes.dir=${build.dir}/test/classes
-platform.active=default_platform
+platform.active=JDK_1.7
 javac.compilerargs=
 main.class=telehealth.TeleHealthApp
 dist.jar=${dist.dir}/TeleHealth.jar
 javadoc.use=true
 file.reference.weblaf-complete-1.29.jar=lib\\weblaf-complete-1.29.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar-1=lib\\db4o-8.0.184.15484-all-java5.jar
 file.reference.swing-worker-1.1.jar=lib\\swing-worker-1.1.jar
 build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
+>>>>>>>=84f340a6f8e21fb82f8f1910413b2bf9374806ac
 build.classes.excludes=**/*.java,**/*.form
-javadoc.splitindex=true
-<<<<<<< HEAD
-javac.source=1.7
-=======
 javadoc.encoding=${source.encoding}
-javac.source=1.6
->>>>>>> 84f340a6f8e21fb82f8f1910413b2bf9374806ac
+javadoc.splitindex=true
+javac.source=1.7
 application.vendor=Sun Microsystems Inc.
-junit.selected.version=4
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-build.generated.dir=${build.dir}/generated
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 jar.compress=false
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
 annotation.processing.run.all.processors=true
-application.title=Basic Application Example
 file.reference.appframework-1.0.3.jar=lib\\appframework-1.0.3.jar
+application.title=Basic Application Example
 meta.inf.dir=${src.dir}/META-INF
-annotation.processing.enabled=true
 manifest.file=manifest.mf
+annotation.processing.enabled=true
 dist.javadoc.dir=${dist.dir}/javadoc
-src.dir=src
 file.reference.swingx-1.6.jar=lib\\swingx-1.6.jar
+src.dir=src
 endorsed.classpath=
 mkdist.disabled=false
+javac.classpath=${libs.swing-app-framework.classpath}\:${file.reference.weblaf-complete-1.29.jar}\:${file.reference.AbsoluteLayout.jar}\:${file.reference.appframework-1.0.3.jar}\:${file.reference.swing-worker-1.1.jar}\:${file.reference.swingx-1.6.jar}\:${file.reference.gson-2.8.5.jar}\:${file.reference.db4o-8.0.184.15484-all-java5.jar-1}
 annotation.processing.enabled.in.editor=false
-javac.classpath=${libs.swing-app-framework.classpath}\:${file.reference.weblaf-complete-1.29.jar}\:${file.reference.db4o-8.0.184.15484-all-java5.jar}\:${file.reference.AbsoluteLayout.jar}\:${file.reference.appframework-1.0.3.jar}\:${file.reference.swing-worker-1.1.jar}\:${file.reference.swingx-1.6.jar}\:${file.reference.gson-2.8.5.jar}
 application.desc=A simple java desktop application based on Swing Application Framework
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
 javadoc.notree=false
+=\=\=\=\=\=\=
