Organization CRUD updated

--- a/src/telehealth/resources/EnterprisePanel.properties
+++ b/src/telehealth/resources/EnterprisePanel.properties
@@ -2,7 +2,6 @@ jLabel7.text=
 jLabel1.text=Name :
 #NOI18N
 jLabel1.font=Roboto 14 Plain
-tblEnterprise.columnModel.title1=Enterprise Type
 tblEnterprise.columnModel.title0=Name
 #NOI18N
 tblEnterprise.font=Roboto 14 Plain
@@ -44,7 +43,7 @@ txtCity.font=Roboto 14 12 12 12 12 12 12 12 Plain
 txtPhone.font=Roboto 14 12 12 12 12 12 12 12 12 Plain
 #NOI18N
 txtContactPerson.font=Roboto 14 12 12 12 12 12 12 12 12 12 12 Plain
-jLabel12.text=Enterprise Type :
+jLabel12.text=Network
 #NOI18N
 jLabel12.font=Roboto 14 12 Plain
 btnSubmit.text=Submit
@@ -60,8 +59,10 @@ tblEnterprise.columnModel.title9=Contact Person
 txtName.font=Roboto 14 12 12 12 12 12 12 12 12 Plain
 #NOI18N
 txtState.font=Roboto 14 12 12 12 12 12 12 12 12 12 Plain
-jLabel13.text=Network :
+jLabel13.text=Enterprise
 #NOI18N
 jLabel13.font=Roboto 14 12 12 Plain
 tblEnterprise.columnModel.title10=Network
 btnDelete.text=Delete
+jLabel11.text=Network
+jLabel14.text=Enterprise
