Created utility class

--- a/src/telehealth/resources/EnterpriseAdminPanel.properties
+++ b/src/telehealth/resources/EnterpriseAdminPanel.properties
@@ -1,8 +1,6 @@
 jLabel1.text=Network
 jLabel2.text=Enterprise
 #NOI18N
-jLabel2.font=Roboto-Plain-14
-#NOI18N
 jComboBox1.font=Roboto-Bold-14
 #NOI18N
 cmbNetwork.font=Roboto-Plain-14
@@ -48,3 +46,7 @@ tblEntAdmin.columnModel.title0=Network
 tblEntAdmin.font=Roboto-Plain-14
 #NOI18N
 jTextField2.font=Roboto-Bold-14
+#NOI18N
+cmbEnterprise.font=Roboto-Plain-14
+#NOI18N
+jLabel2.font=Roboto-Bold-14
