--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -42,3 +42,4 @@ jmiNetwork.text=Network
 jmiOrganization.text=Organization
 jmiUserAccount.text=User Account
 jmiPatient.text=Patient
+jMenuItem1.text=Logout
