Minor updates and Add user for organization started

--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -43,3 +43,5 @@ jmiOrganization.text=Organization
 jmiUserAccount.text=User Account
 jmiPatient.text=Patient
 jMenuItem1.text=Logout
+jMenu1.text=Admin
+jmiAddUser.text=Add User
