--- a/src/telehealth/resources/DiagnosisPanel.properties
+++ b/src/telehealth/resources/DiagnosisPanel.properties
@@ -4,13 +4,9 @@ jLabel1.font=Roboto 14 Plain
 jLabel2.text=Blood Pressure Diastolic :
 #NOI18N
 jLabel2.font=Roboto 14 12 Plain
-#NOI18N
-bloodPressureSystolicTextFeild.font=Roboto 14 Plain
 jLabel3.text=Heart Rate :
 #NOI18N
 jLabel3.font=Roboto 14 12 12 Plain
-#NOI18N
-bloodPressureDiastolicTextFeild.font=Roboto 14 12 Plain
 jLabel4.text=Respiratory Rate :
 #NOI18N
 jLabel4.font=Roboto 14 12 12 12 Plain
@@ -54,3 +50,11 @@ diagnosisDetailTextFeild.font=Roboto 14 12 12 12 12 12 Plain
 jLabel10.text=Patient :
 #NOI18N
 jLabel10.font=Roboto 14 12 Plain
+#NOI18N
+txtBloodPressureSystolic.font=Roboto 14 Plain
+#NOI18N
+txtBloodPressureDiastolic.font=Roboto 14 12 Plain
+#NOI18N
+btnAdd.font=Roboto-Plain-14
+#NOI18N
+btnDelete.font=Roboto-Plain-14
