PatientDiagnosis in menu

--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -45,3 +45,5 @@ jmiPatient.text=Patient
 jMenuItem1.text=Logout
 jMenu1.text=Admin
 jmiAddUser.text=Add User
+patientMenu.text=Patient
+jmiPatientDiagnosis.text=Patient Diagnosis
