Add user completed fro enterprise

--- a/src/telehealth/resources/OrganizationUserPanel.properties
+++ b/src/telehealth/resources/OrganizationUserPanel.properties
@@ -33,3 +33,14 @@ jLabel4.font=Roboto 14 Bold
 txtUsername.font=Roboto 14 Plain
 #NOI18N
 tblEntAdmin.font=Roboto 14 Plain
+jLabel10.text=Organization
+#NOI18N
+jLabel10.font=Roboto 14 12 Bold
+#NOI18N
+cmbOrganization.font=Roboto 14 Plain
+tblEntAdmin.columnModel.title0=Network
+tblEntAdmin.columnModel.title5=Phone
+tblEntAdmin.columnModel.title4=Email
+tblEntAdmin.columnModel.title3=Name
+tblEntAdmin.columnModel.title2=Username
+tblEntAdmin.columnModel.title1=Organization
