--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -47,3 +47,7 @@ jMenu1.text=Admin
 jmiAddUser.text=Add User
 patientMenu.text=Patient
 jmiPatientDiagnosis.text=Patient Diagnosis
+#NOI18N
+jMenu1.font=Segoe UI-Plain-14
+#NOI18N
+patientMenu.font=Segoe UI-Plain-14
