Patient diagnosis intermediate 2

--- a/src/telehealth/resources/DiagnosisPanel.properties
+++ b/src/telehealth/resources/DiagnosisPanel.properties
@@ -58,3 +58,4 @@ txtBloodPressureDiastolic.font=Roboto 14 12 Plain
 btnAdd.font=Roboto-Plain-14
 #NOI18N
 btnDelete.font=Roboto-Plain-14
+tblDiagnosis.columnModel.title8=Patient
