Done some changes in Insurance Panel

--- a/src/telehealth/resources/InsurancePanel.properties
+++ b/src/telehealth/resources/InsurancePanel.properties
@@ -21,7 +21,7 @@ jLabel4.text=Policy Coverage :
 #NOI18N
 jLabel4.font=Roboto 14 12 14 12 12 12-Plain-14
 #NOI18N
-txtPolicyCoverage.font=Roboto 14 12 12 12 12 12 Plain
+txtPolicyCoverage.font=Roboto 14 12 12 12 12 12-Plain-14
 jLabel5.text=Policy Start Date :
 #NOI18N
 jLabel5.font=Roboto 14 12 14 12 12 12 12-Plain-14
@@ -37,3 +37,11 @@ btnAdd.text=Add
 btnDelete.text=Delete
 #NOI18N
 tblPrescription.font=Roboto 14 12 12 Plain
+#NOI18N
+txtpolicyStartDate.font=Tahoma-Plain-14
+#NOI18N
+txtpolicyEndDate.font=Tahoma-Plain-14
+#NOI18N
+btnAdd.font=Tahoma-Bold-14
+#NOI18N
+btnDelete.font=Tahoma-Bold-14
