--- a/src/telehealth/resources/ClaimPanel.properties
+++ b/src/telehealth/resources/ClaimPanel.properties
@@ -22,8 +22,8 @@ btnAdd.font=Tahoma-Bold-14
 btnDelete.font=Tahoma-Bold-14
 tblPrescription2.columnModel.title4=Patient Diagnosis
 tblPrescription2.columnModel.title3=Patient
-tblPrescription2.columnModel.title1=Claim Amount
-tblPrescription2.columnModel.title0=Patient
+tblClaim.columnModel.title2=Claim date
+tblClaim.columnModel.title1=Claim Amount
+tblClaim.columnModel.title0=Patient
 #NOI18N
-tblPrescription2.font=Roboto 14 12 12 12 Plain
-tblPrescription2.columnModel.title2=Claim date
+tblClaim.font=Roboto 14 12 12 12 Plain
