Patient prescription added

--- a/src/telehealth/resources/PrescriptionPanel.properties
+++ b/src/telehealth/resources/PrescriptionPanel.properties
@@ -1,21 +1,13 @@
 jLabel1.text=Amount :
 #NOI18N
-jLabel1.font=Roboto 14 12-Plain-14
-#NOI18N
-txtAmount.font=Roboto 14 12 Plain
+txtAmount.font=Roboto-Plain-14
 jLabel2.text=Next Prescription Date :
-#NOI18N
-jLabel2.font=Roboto 14 12 12-Plain-14
 txtNextPrescriptionDate.text=01/01/2001
 jLabel3.text=Notes :
 #NOI18N
-jLabel3.font=Roboto 14 12 12 12-Plain-14
+jLabel3.font=Roboto-Plain-14
 jLabel4.text=Patient :
-#NOI18N
-jLabel4.font=Roboto 14 12 12-Plain-14
 jLabel5.text=Patient Diagnosis :
-#NOI18N
-jLabel5.font=Roboto 14 12 12 12 12-Plain-14
 tblDiagnosis.columnModel.title7=Notes
 tblDiagnosis.columnModel.title6=Details
 tblDiagnosis.columnModel.title5=Next Diagnosis Date
@@ -28,3 +20,26 @@ tblPrescription.columnModel.title0=Amount
 tblPrescription.font=Roboto 14 12 Plain
 btnAdd.text=Add
 btnDelete.text=Delete
+jLabel6.text=Prescription Details
+jLabel7.text=Drug Name
+jLabel8.text=Quantity
+#NOI18N
+jLabel8.font=Roboto-Plain-14
+#NOI18N
+cmbPatient.font=Roboto-Plain-14
+#NOI18N
+txtNextPrescriptionDate.font=Roboto-Plain-14
+#NOI18N
+txtAreaNotes.font=Roboto-Plain-14
+#NOI18N
+jLabel6.font=Roboto-Plain-14
+#NOI18N
+btnAdd.font=Roboto-Bold-14
+tblPrescription.columnModel.title5=
+txtDrugName.text=
+btnAddDrug.text=Add
+tblPrescriptionDetails.columnModel.title1=Quantity
+tblPrescriptionDetails.columnModel.title0=Drug Name
+jFormattedTextField1.text=
+#NOI18N
+txtDrugQuantity.font=Roboto-Plain-14
