--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -51,3 +51,12 @@ jmiPatientDiagnosis.text=Patient Diagnosis
 jMenu1.font=Segoe UI-Plain-14
 #NOI18N
 patientMenu.font=Segoe UI-Plain-14
+#NOI18N
+jMenuItem1.font=Segoe UI-Plain-14
+#NOI18N
+jmiAddUser.font=Segoe UI-Plain-14
+#NOI18N
+jmiPatientDiagnosis.font=Segoe UI-Plain-14
+jMenuItem2.text=Patient Prescription
+#NOI18N
+jMenuItem2.font=Segoe UI-Plain-14
