--- a/src/telehealth/resources/ClaimPanel.properties
+++ b/src/telehealth/resources/ClaimPanel.properties
@@ -22,8 +22,14 @@ btnAdd.font=Tahoma-Bold-14
 btnDelete.font=Tahoma-Bold-14
 tblPrescription2.columnModel.title4=Patient Diagnosis
 tblPrescription2.columnModel.title3=Patient
-tblClaim.columnModel.title2=Claim date
-tblClaim.columnModel.title1=Claim Amount
+tblClaim.columnModel.title2=Claim Amount
+tblClaim.columnModel.title1=Patient Insurance
 tblClaim.columnModel.title0=Patient
 #NOI18N
 tblClaim.font=Roboto 14 12 12 12 Plain
+jLabel4.text=Patient Insurance:
+#NOI18N
+jLabel4.font=Roboto 14 12 14 14 12 14 12-Plain-14
+#NOI18N
+cmbPatientInsurance.font=Tahoma 14 Plain
+tblClaim.columnModel.title3=Claim date
