insurance add for patient

--- a/src/telehealth/resources/InsurancePanel.properties
+++ b/src/telehealth/resources/InsurancePanel.properties
@@ -36,8 +36,6 @@ jLabel7.font=Roboto 14 12 14 12 12 12-Plain-14
 btnAdd.text=Add
 btnDelete.text=Delete
 #NOI18N
-tblPrescription.font=Roboto 14 12 12 Plain
-#NOI18N
 txtpolicyStartDate.font=Tahoma-Plain-14
 #NOI18N
 txtpolicyEndDate.font=Tahoma-Plain-14
@@ -45,3 +43,12 @@ txtpolicyEndDate.font=Tahoma-Plain-14
 btnAdd.font=Tahoma-Bold-14
 #NOI18N
 btnDelete.font=Tahoma-Bold-14
+tblInsurance.columnModel.title5=End Date
+tblInsurance.columnModel.title4=Start Date
+tblInsurance.columnModel.title3=Amount
+tblInsurance.columnModel.title2=Coverage
+tblInsurance.columnModel.title1=Plan
+tblInsurance.columnModel.title0=Policy Number
+tblInsurance.columnModel.title6=Patient Name
+#NOI18N
+tblInsurance.font=Roboto 14 12 12 Plain
