--- a/src/telehealth/resources/PatientPanel.properties
+++ b/src/telehealth/resources/PatientPanel.properties
@@ -1,5 +1,5 @@
 jLabel1.text=Name
-txtPatientName.text=Bhavya
+txtPatientName.text=
 lblPatientDOB.text=Date of Birth
 lblPatientBloodGroup.text=Blood Group
 lblPatientEmail.text=Email ID
@@ -11,9 +11,9 @@ lblPatientAddress2.text=Address 2
 lblPatientAddress1.text=Address 1
 btnAddPatient.text=Add
 btnDeletePatient.text=Delete
-txtPatientPhone.text=(617)959-0785
+txtPatientPhone.text=(   )   -    
 lblPatientState.text=State
-txtPatientState.text=MA
+txtPatientState.text=
 tblPatient.columnModel.title7=Blood Group
 tblPatient.columnModel.title6=Email ID
 tblPatient.columnModel.title5=Phone No.
@@ -24,8 +24,8 @@ tblPatient.columnModel.title1=Date of Birth
 tblPatient.columnModel.title0=Name
 tblPatient.columnModel.title8=Id
 tblPatient.columnModel.title9=State
-txtPatientDOB.text=08/14/1997
-txtPatientCity.text=Boston
-txtPatientZipcode.text=02120
-txtPatientCountry.text=United States
-txtPatientEmail.text=patelbhavya@hotmail.com
+txtPatientDOB.text=\ \ /  /    
+txtPatientCity.text=
+txtPatientZipcode.text=\ \ \ \ \ 
+txtPatientCountry.text=
+txtPatientEmail.text=
