--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -60,3 +60,5 @@ jmiPatientDiagnosis.font=Segoe UI-Plain-14
 jMenuItem2.text=Patient Prescription
 #NOI18N
 jMenuItem2.font=Segoe UI-Plain-14
+jMenu2.text=Insurance
+jmiAddInsurance.text=Add Insurance
