--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -43,22 +43,15 @@ jmiOrganization.text=Organization
 jmiUserAccount.text=User Account
 jmiPatient.text=Patient
 jMenuItem1.text=Logout
-jMenu1.text=Admin
 jmiAddUser.text=Add User
-patientMenu.text=Patient
 jmiPatientDiagnosis.text=Patient Diagnosis
-#NOI18N
-jMenu1.font=Segoe UI-Plain-14
-#NOI18N
-patientMenu.font=Segoe UI-Plain-14
 #NOI18N
 jMenuItem1.font=Segoe UI-Plain-14
 #NOI18N
 jmiAddUser.font=Segoe UI-Plain-14
 #NOI18N
 jmiPatientDiagnosis.font=Segoe UI-Plain-14
-jMenuItem2.text=Patient Prescription
-#NOI18N
-jMenuItem2.font=Segoe UI-Plain-14
-jMenu2.text=Insurance
 jmiAddInsurance.text=Add Insurance
+jmiPatientPrescription.text=Patient Prescription
+#NOI18N
+jmiPatientPrescription.font=Segoe UI-Plain-14
