Pharmacy work area in main menu

--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -55,3 +55,8 @@ jmiAddInsurance.text=Add Insurance
 jmiPatientPrescription.text=Patient Prescription
 #NOI18N
 jmiPatientPrescription.font=Segoe UI-Plain-14
+#NOI18N
+jmiAddInsurance.font=Segoe UI-Plain-14
+jMenuItem2.text=Pharmacy Work Area
+#NOI18N
+jMenuItem2.font=Segoe UI-Plain-14
