claim insurance started

--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -57,6 +57,7 @@ jmiPatientPrescription.text=Patient Prescription
 jmiPatientPrescription.font=Segoe UI-Plain-14
 #NOI18N
 jmiAddInsurance.font=Segoe UI-Plain-14
-jMenuItem2.text=Pharmacy Work Area
+jmiClaimInsurance.text=Claim Insurance
+jmiPharmacyWorkArea.text=Pharmacy Work Area
 #NOI18N
-jMenuItem2.font=Segoe UI-Plain-14
+jmiPharmacyWorkArea.font=Segoe UI-Plain-14
