insurance claim in progress

--- a/src/telehealth/resources/ClaimPanel.properties
+++ b/src/telehealth/resources/ClaimPanel.properties
@@ -9,7 +9,7 @@ jLabel3.text=Claim Date :
 jLabel3.font=Roboto 14 12 14 14 12 12-Plain-14
 #NOI18N
 txtClaimAmount.font=Roboto 14 12 12 12 Plain
-txtClaimDate.text=01/01/2001
+txtClaimDate.text=
 #NOI18N
 txtClaimDate.font=Tahoma-Plain-14
 #NOI18N
@@ -27,9 +27,9 @@ tblClaim.columnModel.title1=Patient Insurance
 tblClaim.columnModel.title0=Patient
 #NOI18N
 tblClaim.font=Roboto 14 12 12 12 Plain
-jLabel4.text=Patient Insurance:
+jLabel4.text=Patient Prescription:
 #NOI18N
 jLabel4.font=Roboto 14 12 14 14 12 14 12-Plain-14
-#NOI18N
-cmbPatientInsurance.font=Tahoma 14 Plain
 tblClaim.columnModel.title3=Claim date
+#NOI18N
+cmbPatientPrescription.font=Tahoma 14 Plain
