--- a/src/telehealth/resources/TitlePanel.properties
+++ b/src/telehealth/resources/TitlePanel.properties
@@ -1,6 +1,6 @@
 jLabel2.text=
 #NOI18N
-jLabel2.icon=about.png
+jLabel2.icon=TeleHealth.png
 lblTitle.text=TeleHealth
 #NOI18N
 lblTitle.font=Roboto Black-Bold-18
