claim issues fixed

--- a/src/telehealth/resources/PrescriptionPanel.properties
+++ b/src/telehealth/resources/PrescriptionPanel.properties
@@ -39,3 +39,5 @@ tblPrescriptionDetails.columnModel.title0=Drug Name
 jFormattedTextField1.text=
 #NOI18N
 txtDrugQuantity.font=Roboto-Plain-14
+tblPrescription.columnModel.title5=Claim Amount
+tblPrescription.columnModel.title6=Claim Date
