Color added in prescription details submit button fix

--- a/src/telehealth/resources/EnterprisePanel.properties
+++ b/src/telehealth/resources/EnterprisePanel.properties
@@ -46,7 +46,7 @@ txtContactPerson.font=Roboto 14 12 12 12 12 12 12 12 12 12 12 Plain
 jLabel12.text=Network
 #NOI18N
 jLabel12.font=Roboto 14 12 Plain
-btnSubmit.text=Submit
+btnSubmit.text=Add
 tblEnterprise.columnModel.title2=Address 1
 tblEnterprise.columnModel.title3=Address 2
 tblEnterprise.columnModel.title4=City
