Final touchup... Main page content UI changes

--- a/src/telehealth/resources/ClaimPanel.properties
+++ b/src/telehealth/resources/ClaimPanel.properties
@@ -33,3 +33,7 @@ jLabel4.font=Roboto 14 12 14 14 12 14 12-Plain-14
 tblClaim.columnModel.title3=Claim date
 #NOI18N
 cmbPatientPrescription.font=Tahoma 14 Plain
+#NOI18N
+btnAdd.icon=onebit_31.png
+#NOI18N
+btnDelete.icon=onebit_32.png
