--- a/src/telehealth/resources/DiagnosisPanel.properties
+++ b/src/telehealth/resources/DiagnosisPanel.properties
@@ -59,3 +59,7 @@ btnAdd.font=Roboto-Plain-14
 #NOI18N
 btnDelete.font=Roboto-Plain-14
 tblDiagnosis.columnModel.title8=Patient
+#NOI18N
+btnAdd.icon=onebit_31.png
+#NOI18N
+btnDelete.icon=onebit_32.png
