--- a/src/telehealth/resources/EnterpriseAdminPanel.properties
+++ b/src/telehealth/resources/EnterpriseAdminPanel.properties
@@ -50,3 +50,7 @@ jTextField2.font=Roboto-Bold-14
 cmbEnterprise.font=Roboto-Plain-14
 #NOI18N
 jLabel2.font=Roboto-Bold-14
+#NOI18N
+btnAdd.icon=onebit_31.png
+#NOI18N
+btnDelete.icon=onebit_32.png
