--- a/src/telehealth/resources/EnterprisePanel.properties
+++ b/src/telehealth/resources/EnterprisePanel.properties
@@ -66,3 +66,13 @@ tblEnterprise.columnModel.title10=Network
 btnDelete.text=Delete
 jLabel11.text=Network
 jLabel14.text=Enterprise
+#NOI18N
+btnSubmit.font=Roboto-Plain-14
+#NOI18N
+networkJComboBox.font=Roboto-Plain-14
+#NOI18N
+ComboBoxEnterpriseType.font=Roboto-Plain-14
+#NOI18N
+btnSubmit.icon=onebit_31.png
+#NOI18N
+btnDelete.icon=onebit_32.png
