--- a/src/telehealth/resources/InsurancePanel.properties
+++ b/src/telehealth/resources/InsurancePanel.properties
@@ -52,3 +52,7 @@ tblInsurance.columnModel.title0=Policy Number
 tblInsurance.columnModel.title6=Patient Name
 #NOI18N
 tblInsurance.font=Roboto 14 12 12 Plain
+#NOI18N
+btnAdd.icon=onebit_31.png
+#NOI18N
+btnDelete.icon=onebit_32.png
