--- a/src/telehealth/resources/NetworkPanel.properties
+++ b/src/telehealth/resources/NetworkPanel.properties
@@ -12,3 +12,7 @@ tblNetwork.font=Roboto-Plain-14
 btnDeleteNetwork.text=Delete
 #NOI18N
 btnDeleteNetwork.font=Roboto 14 Bold
+#NOI18N
+btnAddNetwork.icon=onebit_31.png
+#NOI18N
+btnDeleteNetwork.icon=onebit_32.png
