--- a/src/telehealth/resources/OrganizationUserPanel.properties
+++ b/src/telehealth/resources/OrganizationUserPanel.properties
@@ -44,3 +44,7 @@ tblEntAdmin.columnModel.title4=Email
 tblEntAdmin.columnModel.title3=Name
 tblEntAdmin.columnModel.title2=Username
 tblEntAdmin.columnModel.title1=Organization
+#NOI18N
+btnAdd.icon=onebit_31.png
+#NOI18N
+btnDelete.icon=onebit_32.png
