--- a/src/telehealth/resources/PatientPanel.properties
+++ b/src/telehealth/resources/PatientPanel.properties
@@ -29,3 +29,11 @@ txtPatientCity.text=
 txtPatientZipcode.text=\ \ \ \ \ 
 txtPatientCountry.text=
 txtPatientEmail.text=
+#NOI18N
+btnAddPatient.font=Roboto-Plain-14
+#NOI18N
+btnAddPatient.font=Roboto-Plain-14
+#NOI18N
+btnAddPatient.icon=onebit_31.png
+#NOI18N
+btnDeletePatient.icon=onebit_32.png
