--- a/src/telehealth/resources/PharmacyWorkAreaPanel.properties
+++ b/src/telehealth/resources/PharmacyWorkAreaPanel.properties
@@ -41,3 +41,5 @@ tblPrescription.columnModel.title0=Patient
 tblPrescription.columnModel.title4=Notes
 tblPrescription.columnModel.title3=Next Prescription Date
 tblPrescription.columnModel.title2=Amount
+#NOI18N
+btnAdd.icon=onebit_20.png
