--- a/src/telehealth/resources/PrescriptionPanel.properties
+++ b/src/telehealth/resources/PrescriptionPanel.properties
@@ -41,3 +41,7 @@ jFormattedTextField1.text=
 txtDrugQuantity.font=Roboto-Plain-14
 tblPrescription.columnModel.title5=Claim Amount
 tblPrescription.columnModel.title6=Claim Date
+#NOI18N
+btnAdd.icon=onebit_31.png
+#NOI18N
+btnDelete.icon=onebit_32.png
