--- a/src/telehealth/resources/TeleHealthView.properties
+++ b/src/telehealth/resources/TeleHealthView.properties
@@ -61,3 +61,11 @@ jmiClaimInsurance.text=Claim Insurance
 jmiPharmacyWorkArea.text=Pharmacy Work Area
 #NOI18N
 jmiPharmacyWorkArea.font=Segoe UI-Plain-14
+jLabel1.text=
+#NOI18N
+jLabel1.icon=TeleHealth.png
+jLabel2.text=<html><center>TeleHealth emphasizes on connecting health, self-care and remote care, with primary focus on monitoring and feedback for the chronically ill, elderly, and those patients located at an untenable distance from primary or specialty providers. It is designed to improve patient-provider communication within an individual medical practice.</center></html>
+#NOI18N
+jLabel2.font=Roboto-Plain-18
+#NOI18N
+jmiClaimInsurance.font=Segoe UI-Plain-14
