--- a/src/telehealth/resources/TitlePanel.properties
+++ b/src/telehealth/resources/TitlePanel.properties
@@ -4,4 +4,8 @@ jLabel2.icon=TeleHealth.png
 lblTitle.text=TeleHealth
 #NOI18N
 lblTitle.font=Roboto Black-Bold-18
-jButton1.text=back
+jButton1.text=Back
+#NOI18N
+jButton1.icon=onebit_29.png
+#NOI18N
+jButton1.font=Roboto-Plain-14
