--- a/src/telehealth/resources/LoginPanel.properties
+++ b/src/telehealth/resources/LoginPanel.properties
@@ -2,5 +2,5 @@ jLabel1.text=Username
 jLabel2.text=Password
 #NOI18N
 jLabel2.font=Tahoma-Plain-14
-txtUsername.text=a
-pwdPassword.text=a
+txtUsername.text=
+pwdPassword.text=
